--- a/JS-Practise-18/style.css
+++ b/JS-Practise-18/style.css
@@ -22,6 +22,11 @@ header {
     background-color: var(--secondary-color);
 }
 
+header .logo{
+    position: relative;
+    left: 10px;
+}
+
 .search {
     background-color: transparent;
     border: 2px solid var(--primary-color);
